--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .body {
-background-image:contact1.jpg;
-backgroun-repeat: no-repeat;
+background-image:"contact1.jpg";
+background-repeat: no-repeat;
 width=100%;
 height=100%;
 margin=0;
