--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .body {
-background-image:"contact1.jpg";
+background-image:'contact1.jpg';
 background-repeat: no-repeat;
 width=100%;
 height=100%;
