--- a/main.css
+++ b/main.css
@@ -1,10 +1,8 @@
 .body {
+background-image: url(contact1.jpg);
 background-repeat: no-repeat;
-width=100%;
-height=100%;
-margin=0;
-border=0;
-padding=0;
+
+
 }
 
 
