--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .body {
-background-image: url(contact1.jpg);
-background-repeat: no-repeat;
+background-image:url(/contact1.jpg);
+background-repeat:no-repeat;
 
 
 }
