--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .body {
-background-image:url(/contact1.jpg);
+background-image:url(https://www.imageupload.co.uk/images/2017/04/20/background.jpg);
 background-repeat:no-repeat;
 background-attachment:fixed;
 
