--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .body {
-background-image:url("contact1.jpg");
+background-image:url("/contact1.jpg");
 background-size: 100% 100%;
 background-attachment:fixed;
 
