--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@ img.bg {
   position: fixed;
   top: 0;
   left: 0;
+  
+  size: fixed;
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
